NetworkInterfaceTL has invalid ServiceContext access

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • Service Arch 2023-09-18, Service Arch 2023-10-02
    • 145
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-51700 introduced an invalid call to getGlobalServiceContext in NetworkInterfaceTL-- change that call to access _svcCtx in the NetworkInterfaceTL class, and check that it is not null.

            Assignee:
            Erin McNulty (Inactive)
            Reporter:
            Erin McNulty (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: