SERVER-81005: Removed invalid call to getGlobalServiceContext